Metodo para devolver o crear juego de la api